feat: login page, hero page style: fonts, styling, navbar, footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Learn Smarter - AI Powered Learning Assistant</title>
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1157/1157109.png" />
-    <meta name="description" content="Personalized learning plans powered by AI. Enhance your learning journey with customized study plans, interactive quizzes, and progress tracking." />
+    <title>NeuraBlend - AI-Powered Learning Platform</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://cdn-icons-png.flaticon.com/512/1157/1157109.png"
+    />
+    <meta
+      name="description"
+      content="NeuraBlend - AI-Powered Personalized Learning Platform. Enhance your learning journey with customized study plans and progress tracking."
+    />
   </head>
   <body>
     <div id="root"></div>
