Added Badge Shops, add new api funcs for badge management and display,  initialize badge db script, add badge png and shop page. Update frontend elements.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://cdn-icons-png.flaticon.com/512/1157/1157109.png"
+      href="/assets/logo.png"
     />
     <meta
       name="description"
